# quick-django-docker-setup

./: .gitignore  README.md  pyproject.toml  setup.py  todolist
quick-django-docker-setup/: celery.py  django_project.py  docker_compose.py  dockerfile.py  env_file.py  main.py  package_manager.py  settings.py  settings_to_insert.py  test.py  urls.py  utils.py
quick-django-docker-setup/backend/: manage.py
quick-django-docker-setup/backend/b/: asgi.py  settings.py  urls.py  wsgi.py
quick-django-docker-setup/backend/y/: asgi.py  settings.py  urls.py  wsgi.py
quick-django-docker-setup/text_to_insert/: celery_to_insert.py  docker_compose_to_insert.py  dockerfile_to_insert.py  env_file_to_insert.py  settings_to_insert.py  urls_to_insert.py
quick_django_docker_setup/: celery.py  django_project.py  docker_compose.py  dockerfile.py  env_file.py  main.py  package_manager.py  settings.py  urls.py  utils.py
quick_django_docker_setup/text_to_insert/: docker_compose_to_insert.py  dockerfile_to_insert.py  env_file_to_insert.py  settings_to_insert.py  urls_to_insert.py
